--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index"
+    "start": "node index",
+    "build": "esbuild index.js --bundle --minify --platform=node --outfile=dist/main.js --external:./database/*"
   },
   "author": "parna",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "esbuild": "^0.19.11",
     "express": "^4.18.2",
     "inversify": "^6.0.2",
     "mongoose": "^8.0.3",
